Added some more integration tests